--- a/Makefile.ps2
+++ b/Makefile.ps2
@@ -15,6 +15,7 @@ include $(PS2SDK)/samples/Makefile.pref
 include $(PS2SDK)/samples/Makefile.eeglobal
 
 GPU  = gpu_unai
+#GPU  = gpu_ps2
 #SPU  = spu_pcsxrearmed
 #SPU  = null_spu
 SPU  = ps2_spu
